# nasri-local-ai

./: .gitignore  README.md
project/nasri-core/: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
project/nasri-core/app/: main.py
project/nasri-core/nasri_agent/: __init__.py  chat.py  cli.py  config.py  device_auth.py  hardware_profile.py  healer.py  location.py  model_manager.py  notifications.py  preflight.py  selfheal_log.py  service.py  soul.py  telegram_setup.py  time_sync.py  tui.py  updater.py
project/nasri-core/tests/: test_anomaly_service.py  test_backup_service.py  test_chat_endpoint.py  test_codegen_service.py  test_driver_service.py  test_external_ai_service.py  test_f104_stt_api.py  test_f106_vault_api.py  test_f107_rbac.py  test_f108_identity_api.py  test_f10_session.py  test_f111_files.py  test_f112_onboarding.py  test_f12_security.py  test_f201_rag_api.py  test_f202_memory_api.py  test_f203_planner_api.py  test_f204_model_router_api.py  test_f205_external_ai_api.py  test_f206_network_api.py  test_f207_ssh_api.py  test_f208_home_automation_api.py  test_f209_maintenance_api.py  test_f210_research_api.py  test_f212_anomaly_api.py  test_f213_backup_api.py  test_f214_driver_api.py  test_f215_integration_regression.py  test_f301_codegen_api.py  test_f302_test_runner_api.py  test_f302_test_runner_service.py  test_f304_zigbee_api.py  test_f305_matter_api.py  test_f306_suggestion_api.py  test_f307_self_heal_api.py  test_f310_dependency_auditor_api.py  test_f310_dependency_auditor_service.py  test_f311_federation_api.py  (+35 more)
(+160 files in other folders)
